force-app/main/default/objects/RE_CND_Base_Reference_Rack_Settings__c/RE_CND_Base_Reference_Rack_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used for Base and Reference Rack Settings for Revolution Canada. And the calculation would be &apos;Rack - Base Rack&apos;</description>
    <label>RE CND Base Reference Rack Settings</label>
</CustomObject>