force-app/main/default/objects/RE_CND_Base_Reference_Rack_Settings__c/fields/Base_Rack__c.field-meta.xml
<CustomField>
    <fullName>Base_Rack__c</fullName>
    <label>Base Rack</label>
    <length>50</length>
    <type>Text</type>
</CustomField>