force-app/main/default/objects/RE_CND_Base_Reference_Rack_Settings__c/fields/Product_Classification_L0__c.field-meta.xml
<CustomField>
    <fullName>Product_Classification_L0__c</fullName>
    <label>Product Classification(L0)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>