force-app/main/default/objects/RE_CND_Base_Reference_Rack_Settings__c/fields/Rack__c.field-meta.xml
<CustomField>
    <fullName>Rack__c</fullName>
    <label>Rack</label>
    <length>50</length>
    <type>Text</type>
</CustomField>