force-app/main/default/objects/RE_CND_Base_Reference_Rack_Settings__c/listViews/Base_Reference_Rack.listView-meta.xml
<ListView>
    <fullName>Base_Reference_Rack</fullName>
    <columns>NAME</columns>
    <columns>Rack__c</columns>
    <columns>Base_Rack__c</columns>
    <columns>Reference_Rack__c</columns>
    <columns>Product_Classification_L0__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Base-Reference Rack</label>
    <language>en_US</language>
</ListView>